release: v0.9.0 — example tools (ExtractSpectra, ConvertToDta, ExtractXic)
- org.mzpeak.examples: ExtractSpectra (read+write filtered subset), ConvertToDta
  (MSn -> Sequest .dta), ExtractXic (ion chromatogram for a target m/z); shared
  SpectrumFilter (--ms-level/--rt-min/--rt-max) + ExampleArgs parser
- 26 tests (3 new example tests); README example section
- bump version 0.1.0-SNAPSHOT -> 0.9.0

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>